@@ -2,6 +2,12 @@
 
 remctl 3.1 (unreleased)
 
+    Add new remctl_set_timeout function to the remctl library API. Call
+    this function after remctl_new and before remctl_open to set a network
+    timeout in seconds.  The client must then receive a reply from the
+    server in no more than that number of seconds or will abort whatever
+    action is in progress with a timeout error.
+
     The remctld server now imposes a one-hour timeout between messages
     from the client rather than a one-hour timeout for the entire session,
     allowing clients to continue to send commands for as long as they stay
